# LeastSquareApproximation

./: .gitmodules  CMakeLists.txt
include/: leastsquaresapproximation.hpp  linearsystemsolver.hpp  lsa_approximator.h  lsa_approximator.hpp  lsa_arithmetic.hpp  lsa_common.hpp  lsa_solver.hpp  lsa_statistics.hpp
src/: lsa_approximator.cpp
